# MaterialX

./: .gitignore  CMakeLists.txt  Jenkinsfile  JsMaterialXCore.js  JsMaterialXCore.wasm  JsMaterialXGenShader.data  JsMaterialXGenShader.js  JsMaterialXGenShader.wasm
.github/scripts/: ci-startup.bash
.github/workflows/: main.yml
Materials/Examples/StandardSurface/: Car_Paint.msl.frag  Car_Paint.osl  Chrome.msl.frag  Chrome.osl  Copper.msl.frag  Copper.osl  Default.msl.frag  Default.osl  Glass.msl.frag  Glass.osl  GlassTinted.msl.frag  GlassTinted.osl  Gold.msl.frag  Gold.osl  Greysphere.msl.frag  Greysphere.osl  Greysphere_Calibration.glsl.frag  Greysphere_Calibration.msl.frag  Greysphere_Calibration.osl  Jade.msl.frag  Jade.osl  M_Bishop_B.msl.frag  M_Bishop_B.osl  M_Bishop_W.msl.frag  M_Bishop_W.osl  M_BrickPattern.msl.frag  M_BrickPattern.osl  M_Castle_B.msl.frag  M_Castle_B.osl  M_Castle_W.msl.frag  M_Castle_W.osl  M_Chessboard.msl.frag  M_Chessboard.osl  M_King_B.msl.frag  M_King_B.osl  M_King_W.msl.frag  M_King_W.osl  M_Knight_B.msl.frag  M_Knight_B.osl  M_Knight_W.msl.frag  (+28 more)
apple/build_scripts/: README.md  build.py  config.json  package.py  utils.py
dev_spec/source/: placeholder.md  stdlib_spec.md
libraries/: CMakeLists.txt
libraries/pbrlib/genglsl/: mx_add_bsdf.glsl  mx_burley_diffuse_bsdf.glsl  mx_chiang_hair_bsdf.glsl  mx_conductor_bsdf.glsl  mx_dielectric_bsdf.glsl  mx_generalized_schlick_bsdf.glsl  mx_layer_bsdf.glsl  mx_layer_vdf.glsl  mx_mix_bsdf.glsl  mx_multiply_bsdf_color3.glsl  mx_multiply_bsdf_float.glsl  mx_oren_nayar_diffuse_bsdf.glsl  mx_sheen_bsdf.glsl  mx_subsurface_bsdf.glsl  mx_translucent_bsdf.glsl  pbrlib_genglsl_impl.mtlx
libraries/pbrlib/genglsl/lib/: mx_microfacet_specular.glsl
libraries/pbrlib/genmsl/: pbrlib_genmsl_impl.mtlx
libraries/pbrlib/genosl/: mx_displacement_float.osl
libraries/stdlib/: stdlib_defs.mtlx  stdlib_ng.mtlx
libraries/stdlib/genglsl/: mx_hextiledimage.glsl  mx_hextilednormalmap.glsl  mx_image_color3.glsl  mx_image_color4.glsl  mx_image_float.glsl  mx_image_vector2.glsl  mx_image_vector3.glsl  mx_image_vector4.glsl
libraries/stdlib/genglsl/lib/: mx_texture_glsl.glsl  mx_texture_wgsl.glsl
libraries/stdlib/genosl/: mx_image_color3.osl  mx_image_color4.osl  mx_image_float.osl  mx_image_vector2.osl  mx_image_vector3.osl  mx_image_vector4.osl
libraries/stdlib/genosl/include/: color4.h  matrix33.h  mx_funcs.h  vector2.h  vector4.h
libraries/stdlib/genosl/lib/: mx_transform_uv_vflip.osl
resources/Materials/TestSuite/: _options.mtlx
scripts/: ci-startup.bash
source/JsMaterialX/: MapHelper.h  VectorHelper.h
source/JsMaterialX/JsMaterialXCore/: JsDocument.cpp
source/MaterialXBuildTools/buildDocs/: Main.cpp
source/MaterialXBuildTools/buildLibrary/: Main.cpp
source/MaterialXCore/: Definition.h  Document.cpp  Document.h  Element.cpp  Element.h  Exception.h  Export.h  Generated.h.in  Geom.h  Interface.h  Library.h  Look.h  Material.h  Node.h  Property.h  Traversal.h  Types.cpp  Types.h  Unit.h  Util.h  Value.cpp  Value.h  Variant.h
source/MaterialXFormat/: Environ.h  Export.h  File.h  Util.cpp  Util.h  XmlIo.cpp  XmlIo.h
source/MaterialXGenGlsl/: EsslShaderGenerator.cpp  EsslShaderGenerator.h  EsslSyntax.h  Export.h  GlslResourceBindingContext.h  GlslShaderGenerator.cpp  GlslShaderGenerator.h  GlslSyntax.cpp  GlslSyntax.h  VkResourceBindingContext.h  VkShaderGenerator.cpp  VkShaderGenerator.h  VkSyntax.h  WgslResourceBindingContext.h  WgslShaderGenerator.cpp  WgslShaderGenerator.h  WgslSyntax.h
source/MaterialXGenGlsl/Nodes/: LightCompoundNodeGlsl.h  LightNodeGlsl.h  LightSamplerNodeGlsl.h  LightShaderNodeGlsl.h  NumLightsNodeGlsl.h  SurfaceNodeGlsl.cpp  SurfaceNodeGlsl.h
source/MaterialXGenMdl/: Export.h  MdlShaderGenerator.cpp  MdlShaderGenerator.h  MdlSyntax.h
source/MaterialXGenMdl/Nodes/: ClosureCompoundNodeMdl.h  ClosureLayerNodeMdl.h  CompoundNodeMdl.h  ConvolutionNode.h  CustomNodeMdl.h  HeightToNormalNodeMdl.h  ImageNodeMdl.h  MaterialNodeMdl.h  SourceCodeNodeMdl.h  SurfaceNodeMdl.h
source/MaterialXGenMsl/: Export.h  MslResourceBindingContext.h  MslShaderGenerator.cpp  MslShaderGenerator.h  MslSyntax.cpp  MslSyntax.h
source/MaterialXGenOsl/: Export.h  OslShaderGenerator.cpp  OslShaderGenerator.h  OslSyntax.h
source/MaterialXGenShader/: CMakeLists.txt  ColorManagementSystem.h  DefaultColorManagementSystem.h  Export.h  Factory.h  GenContext.cpp  GenContext.h  GenOptions.h  GenUserData.h  HwShaderGenerator.cpp  HwShaderGenerator.h  Library.h  OcioColorManagementSystem.h  Shader.h  ShaderGenerator.cpp  ShaderGenerator.h  ShaderGraph.cpp  ShaderGraph.h  ShaderNode.h  ShaderNodeImpl.h  ShaderStage.cpp  ShaderStage.h  ShaderTranslator.h  Syntax.cpp  Syntax.h  TypeDesc.h  UnitSystem.h  Util.h
source/MaterialXGraphEditor/: CMakeLists.txt  FileDialog.h  Graph.h  Main.cpp  RenderView.h  UiNode.h
source/MaterialXGraphEditor/Apple/: NativeFileDialog.h  NativeFileDialog.mm
source/MaterialXLibrary/: CMakeLists.txt  EmbeddedLibrary.cpp  EmbeddedLibrary.h  Export.h  LibraryBuildingTool.cpp  LibraryEmbeddingTool.cpp
source/MaterialXRender/: CMakeLists.txt  Camera.h  CgltfLoader.h  Export.h  GeometryHandler.h  Harmonics.h  Image.h  ImageHandler.h  LightHandler.h  Mesh.h  OiioImageLoader.h  ShaderMaterial.h  ShaderRenderer.h  StbImageLoader.h  TextureBaker.h  Timer.h  TinyObjLoader.h  Types.h  Util.h
source/MaterialXRenderGlsl/: Export.h  GLCocoaWrappers.h  GLContext.h  GLFramebuffer.h  GLTextureHandler.h  GLUtil.h  GlslMaterial.h  GlslProgram.h  GlslRenderer.h  TextureBaker.h
source/MaterialXRenderHw/: Export.h  SimpleWindow.h  WindowCocoaWrappers.h  WindowWrapper.h
source/MaterialXRenderMsl/: Export.h  MetalFramebuffer.h  MetalState.h  MetalTextureHandler.h  MslMaterial.h  MslPipelineStateObject.h  MslRenderer.h  TextureBaker.h
source/MaterialXRenderOsl/: Export.h  OslRenderer.cpp  OslRenderer.h
source/MaterialXTest/: CMakeLists.txt
source/MaterialXView/: CMakeLists.txt  RenderPipeline.h  RenderPipelineGL.h  RenderPipelineMetal.h  Viewer.cpp
source/PyMaterialX/: PyMaterialX.h
(+47 files in other folders)
